[package]
name = "leo-fmt"
version = "3.3.1"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Formatter for Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies.leo-errors]
workspace = true

[dependencies.leo-parser]
workspace = true

[dependencies.leo-parser-lossless]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.biome_formatter]
git = "https://github.com/biomejs/biome.git"
package = "biome_formatter"
tag = "@biomejs/biome@2.3.3"

[dependencies.colored]
workspace = true

[dependencies.similar]
version = "2.7.0"

[dependencies.walkdir]
workspace = true
