[package]
name = "leo-gadgets"
version = "1.2.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Gadgets of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-errors]
version = "0.0.4"
default-features = false

[dependencies.snarkvm-models]
version = "0.0.4"
default-features = false

[dependencies.snarkvm-utilities]
version = "0.0.4"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_xorshift]
version = "0.2"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "integer_arithmetic"
path = "benches/integer_arithmetic.rs"
harness = false
