[package]
name = "leo-abnf"
version = "1.3.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "ABNF to Markdown converter for the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies]
abnf = "0.10.2"
anyhow = "1.0"
