[package]
name = "leo-imports"
version = "1.4.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Import parser for Leo program package dependencies"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.4.0"

[dependencies.leo-asg]
path = "../asg"
version = "1.4.0"

[dependencies.leo-parser]
path = "../parser"
version = "1.4.0"

[dependencies.indexmap]
version = "1.6.2"
features = [ "serde-1" ]

[dependencies.thiserror]
version = "1.0"

[dependencies.tracing]
version = "0.1"
