[package]
name = "leo-imports"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Import parser for Leo program package dependencies"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.56"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.3"

[dependencies.leo-ast-passes]
path = "../ast-passes"
version = "1.5.3"

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.leo-parser]
path = "../parser"
version = "1.5.3"

[dependencies.leo-span]
path = "../span"
version = "1.5.3"

[dependencies.indexmap]
version = "1.8.0"
features = [ "serde-1" ]

[dependencies.tracing]
version = "0.1"
