[package]
name = "leo-input"
version = "1.0.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Input parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = ["aleo", "cryptography", "leo", "programming-language", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { version = "1.0.0", default-features = false }
snarkos-curves = { version = "1.0.0", default-features = false }
snarkos-errors = { version = "1.0.0", default-features = false }
snarkos-gadgets = { version = "1.0.0", default-features = false }
snarkos-models = { version = "1.0.0", default-features = false }

from-pest = { version = "0.3.1" }
pest = { version = "2.0" }
pest-ast = { version = "0.3.3" }
pest_derive = { version = "2.0" }
thiserror = { version = "1.0" }
