[package]
name = "leo-input"
version = "1.0.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Input parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkos-algorithms]
version = "1.1.3"
default-features = false

[dependencies.snarkos-curves]
version = "1.1.3"
default-features = false

[dependencies.snarkos-errors]
version = "1.1.3"
default-features = false

[dependencies.snarkos-gadgets]
version = "1.1.3"
default-features = false

[dependencies.snarkos-models]
version = "1.1.3"
default-features = false

[dependencies.from-pest]
version = "0.3.1"

[dependencies.pest]
version = "2.0"

[dependencies.pest-ast]
version = "0.3.3"

[dependencies.pest_derive]
version = "2.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.tracing]
version = "0.1"
