[package]
name = "leo-interpreter"
version = "3.1.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Interpreter for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies.snarkvm]
workspace = true

[dependencies.leo-ast]
workspace = true

[dependencies.leo-errors]
workspace = true

[dependencies.leo-parser]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.crossterm]
version = "0.28.1"

[dependencies.indexmap]
workspace = true

[dependencies.dialoguer]
version = "0.11.0"
features = [ "history" ]

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.ratatui]
version = "0.29.0"

[dependencies.itertools]
workspace = true

[dev-dependencies.leo-test-framework]
workspace = true

[dev-dependencies.serial_test]
workspace = true

[dev-dependencies.tempfile]
workspace = true
