[package]
name = "leo-interpreter"
version = "3.4.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Interpreter for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies]
# leo dependencies
leo-ast       = { workspace = true }
leo-errors    = { workspace = true }
leo-parser    = { workspace = true }
leo-span      = { workspace = true }
# third party dependencies
colored       = { workspace = true }
crossterm     = { workspace = true }
dialoguer     = { workspace = true, features = [ "history" ] }
indexmap      = { workspace = true }
itertools     = { workspace = true }
rand          = { workspace = true }
rand_chacha   = { workspace = true }
ratatui       = { workspace = true }
snarkvm       = { workspace = true }

[dev-dependencies]
# leo dependencies
leo-compiler       = { workspace = true }
leo-disassembler   = { workspace = true }
leo-test-framework = { workspace = true }
# third party dependencies
chrono             = { workspace = true }
regex              = { workspace = true }
serial_test        = { workspace = true }
tempfile           = { workspace = true }
walkdir            = { workspace = true }
