[package]
name = "leo-interpreter"
version = "3.5.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Interpreter for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies.leo-ast]
workspace = true

[dependencies.leo-errors]
workspace = true

[dependencies.leo-parser]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.dialoguer]
workspace = true
features = [ "history" ]

[dependencies.indexmap]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.ratatui]
workspace = true

[dependencies.snarkvm]
workspace = true

[dev-dependencies.leo-compiler]
workspace = true

[dev-dependencies.leo-disassembler]
workspace = true

[dev-dependencies.leo-test-framework]
workspace = true

[dev-dependencies.chrono]
workspace = true

[dev-dependencies.regex]
workspace = true

[dev-dependencies.serial_test]
workspace = true

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.walkdir]
workspace = true
