[package]
name = "leo-fmt"
version = "3.4.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Source code formatter for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "formatter",
  "code-formatter",
  "leo",
  "aleo"
]
categories = [ "development-tools", "command-line-utilities" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies]
leo-parser-rowan    = { workspace = true }

[dev-dependencies]
similar             = { version = "2.6" }
walkdir             = { workspace = true }
