[package]
name = "leo-package"
version = "1.0.0"
authors = ["The Aleo Team <hello@aleo.org>"]
edition = "2018"

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
toml = { version = "0.5" }
walkdir = { version = "2" }
zip = { version = "0.5" }
