[package]
name = "leo-package"
version = "1.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Package parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.thiserror]
version = "1.0"

[dependencies.toml]
version = "0.5"

[dependencies.tracing]
version = "0.1"

[dependencies.walkdir]
version = "2"

[dependencies.zip]
version = "0.5"

[dev-dependencies.lazy_static]
version = "1.3.0"

[features]
default = [ "manifest_refactors" ]
manifest_refactors = [ "manifest_refactor_project", "manifest_refactor_remote" ]
manifest_refactor_project = [ ]
manifest_refactor_remote = [ ]
