[package]
name = "leo-span"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Span handling in the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies.fxhash]
version = "0.2.1"

[dependencies.indexmap]
version = "1.8"
features = ["serde"]

[dependencies.serde]
version = "1.0.133"
features = [ "derive", "rc" ]

[dependencies.scoped-tls]
version = "1.0.0"

[dependencies.pest]
version = "2.0"

[dependencies.tendril]
version = "0.4.2"

