[package]
name = "leo-state"
version = "1.5.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "State parser of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-input]
path = "../input"
version = "1.5.1"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.1"

[dependencies.snarkvm-algorithms]
version = "0.5.4"

[dependencies.snarkvm-curves]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-dpc]
version = "0.5.4"
default-features = false
features = [ "testnet1" ]

[dependencies.snarkvm-utilities]
version = "0.5.4"

[dependencies.indexmap]
version = "1.6.2"
features = [ "serde-1" ]

[dependencies.rand]
version = "0.8"

[dependencies.rand_xorshift]
version = "0.3"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.rand_core]
version = "0.6.2"
