[package]
name = "leo-synthesizer"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuit synthesizer of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "435f112"
default-features = false

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.snarkvm-fields]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "435f112"
default-features = false

[dependencies.snarkvm-gadgets]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "435f112"

[dependencies.snarkvm-r1cs]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "435f112"
default-features = false

[dependencies.eyre]
version = "0.6.6"
default-features = false

[dependencies.num-bigint]
version = "0.4"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.sha2]
version = "0.10"

[dependencies.hex]
version = "0.4"
