[package]
name = "leo-test-framework"
version = "3.2.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "The testing framework for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography" ]
include = [ "Cargo.toml", "src", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies.rayon]
version = "1.10"

[dependencies.walkdir]
workspace = true

[features]
no_parallel = [ ]
