[package]
name = "leo-type-inference"
version = "1.0.8"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Checks that a program is correct using type inference"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.0.8"

[dependencies.leo-imports]
path = "../imports"
version = "1.0.8"

[dependencies.leo-grammar]
path = "../grammar"
version = "1.0.8"

[dependencies.leo-symbol-table]
path = "../symbol-table"
version = "1.0.8"

[dependencies.indexmap]
version = "1.6.1"
features = [ "serde-1" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
