[package]
name = "leo-typed"
version = "1.0.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Typed AST of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = ["aleo", "cryptography", "leo", "programming-language", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[bin]]
name = "leo_typed_ast"
path = "src/main.rs"

[[bench]]
name = "typed_ast"
path = "benches/typed_ast.rs"
harness = false

[dependencies]
leo-ast = { path = "../ast", version = "1.0.0" }
leo-input = { path = "../input", version = "1.0.0" }

snarkos-errors = { version = "1.1.3", default-features = false }
snarkos-models = { version = "1.1.3", default-features = false }

pest = { version = "2.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3" }

[features]
default = []
ci_skip = ["leo-ast/ci_skip"]
