[package]
name = "leo-typed"
version = "0.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bin]]
name = "leo_typed_ast"
path = "src/main.rs"

[[bench]]
name = "typed_ast"
harness = false

[dependencies]
leo-ast = { path = "../ast", version = "0.1.0" }
leo-input = { path = "../leo-input", version = "0.1.0" }

snarkos-errors = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-errors", default-features = false }
snarkos-models =  { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-models", default-features = false }

pest = { version = "2.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3" }

[features]
default = []
ci_skip = ["leo-ast/ci_skip"]
