[package]
name = "leo-wasm"
version = "1.2.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "WASM interpreter of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#leo-asg = { path = "../asg", version = "1.2.0" }
leo-ast = { path = "../ast", version = "1.2.0" }
#leo-imports = { path = "../imports", version = "1.2.0" }
leo-grammar = { path = "../grammar", version = "1.2.0" }

serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.20" }
